tests/valid/test1.c
int a = 10;
int b = 20;
float pi = 3.14;
float radius = 5.0;

int result;
result = a + b * 2;

float area;
area = pi * radius * radius;