tests/errors/error_syntax_missing_semicolon.c
int x = 10
float y = 20.0;
